@@ -2,15 +2,15 @@ package com.byshnev.groupschedule.service.changes;
 
 import com.byshnev.groupschedule.cache.GroupCache;
 import com.byshnev.groupschedule.cache.ScheduleChangesCache;
+import com.byshnev.groupschedule.model.dto.GroupDto;
 import com.byshnev.groupschedule.model.entity.StudentGroup;
 import com.byshnev.groupschedule.repository.GroupRepository;
-import com.byshnev.groupschedule.repository.LessonRepository;
+import com.byshnev.groupschedule.service.utility.GroupUtility;
 import jakarta.transaction.Transactional;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -21,54 +21,56 @@ public class GroupService {
 	private LessonService lessonService;
 
 	@Transactional
-	public List<Integer> getAllGroups() {
+	public List<GroupDto> getAllGroups() {
 		return groupRepository.findAll().stream()
-				.map(StudentGroup::getGroupNum)
-				.collect(Collectors.toList());
+				.map(GroupUtility::convertToDto)
+				.toList();
 	}
 
 	@Transactional
-	public StudentGroup getByNum(Integer groupNum) {
-		StudentGroup tmp = groupCache.get(groupNum).orElse(null);
-		if (tmp != null)
-			return tmp;
+	public GroupDto getGroupSize(Integer groupNum) {
+		GroupDto tmpDto = groupCache.get(groupNum).orElse(null);
+		StudentGroup tmp;
+		if (tmpDto != null)
+			return tmpDto;
 		else if ((tmp = groupRepository.findById(groupNum).orElse(null)) != null) {
-			groupCache.put(groupNum, tmp);
-			return tmp;
+			tmpDto = GroupUtility.convertToDto(tmp);
+			groupCache.put(groupNum, tmpDto);
+			return tmpDto;
 		}
 		return null;
 	}
 
 	@Transactional
-	public StudentGroup add(StudentGroup group) {
+	public GroupDto add(GroupDto group) {
 		if (groupRepository.findByGroupNum(group.getGroupNum()) == null) {
-			StudentGroup tmp = groupRepository.save(new StudentGroup(
-					group.getGroupNum(),
-					group.getStudentsAmount()));
-			groupCache.put(tmp.getGroupNum(), tmp);
-			return tmp;
+			groupCache.put(group.getGroupNum(), group);
+			return GroupUtility.convertToDto(
+					groupRepository.save(GroupUtility.createEntityWithoutLink(group)));
 		}
 		else return null;
 	}
 
 	@Transactional
-	public StudentGroup update(Integer groupNum, StudentGroup group) {
+	public GroupDto update(Integer groupNum, GroupDto group) {
 		StudentGroup tmp = groupRepository.findById(groupNum).orElse(null);
 		if (tmp != null) {
 			tmp.setGroupNum(group.getGroupNum());
 			tmp.setStudentsAmount(group.getStudentsAmount());
-			groupCache.put(groupNum, tmp);
-			return groupRepository.save(tmp);
+			groupCache.put(groupNum, group);
+			groupRepository.flush();
+			return group;
 		}
 		else return null;
 	}
 
 	@Transactional
 	public boolean delete(Integer groupNum) {
-		if (!groupRepository.existsById(groupNum)) {
+		StudentGroup tmp = groupRepository.findById(groupNum).orElse(null);
+		if (tmp == null) {
 			return false;
 		}
-		for (var lesson : groupRepository.findById(groupNum).get().getLessons()) {
+		for (var lesson : tmp.getLessons()) {
 			lessonCache.remove(lesson.getId());
 		}
 		groupCache.remove(groupNum);
